cards are now fine just o fix the gap

--- a/frontend/src/index2.css
+++ b/frontend/src/index2.css
@@ -69,7 +69,8 @@
 }
 
 .home-review-card{
-    width: 20rem;
+    width: 16rem;
+    font-size: 14px;
 }
 
 .rating-stars{
